# gitnote

./: .gitignore  README.md  README_zh-CN.md  package.json
public/: index.html
src/: App.tsx  WithRouter.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  files.rs  global.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: file_command.rs  mod.rs  system_command.rs  windows_command.rs
src-tauri/src/events/: mod.rs  system_event.rs
src/components/center/: MiddleArea.tsx
src/components/top/: TopArea.tsx  TopMenuBar.tsx
src/globals/: icons.tsx
src/globals/commands/: FileCommand.ts  PagesCommand.ts  SystemCommand.ts  WindowsCommand.ts
src/globals/config/: pages.json
src/globals/events/: SystemEvents.ts
src/globals/theme/: OverflowTypeManager.ts  ThemeManager.ts
src/layout/: MainLayout.tsx
src/pages/: AppsPage.tsx  FavoritesPage.tsx  NotePageIndex.tsx  SystemSettingPage.tsx  TagsPage.tsx  TodoPage.tsx
src/pages/NotePage/: TextFormatUtils.ts  TextToolbar.tsx  index.tsx
src/pages/SystemSettingPage/: BasicSettings.tsx  DefaultSettings.tsx  GitSettings.tsx  LocalDirectorySettings.tsx  index.tsx
src/styles/: TradePage.css
